{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 37,
  "lineage": "d6d2090e-d897-4dda-1f7c-d73b94e8c0d6",
  "resources": [
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de280db3cf13e878",
            "association_id": "eipassoc-0d182180275ff1fa9",
            "domain": "vpc",
            "id": "eipalloc-0de280db3cf13e878",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0718bf25efe108c0d",
            "private_dns": "ip-10-0-0-115.ec2.internal",
            "private_ip": "10.0.0.115",
            "public_dns": "ec2-54-87-114-178.compute-1.amazonaws.com",
            "public_ip": "54.87.114.178",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway eip for public subnet 1"
            },
            "tags_all": {
              "Name": "nat gateway eip for public subnet 1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ed21a7e6fd44f0c",
            "association_id": "eipassoc-0523f5634382c6c4c",
            "domain": "vpc",
            "id": "eipalloc-07ed21a7e6fd44f0c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-054a9b0f180c88ff2",
            "private_dns": "ip-10-0-1-190.ec2.internal",
            "private_ip": "10.0.1.190",
            "public_dns": "ec2-54-166-155-159.compute-1.amazonaws.com",
            "public_ip": "54.166.155.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway eip for public subnet 2"
            },
            "tags_all": {
              "Name": "nat gateway eip for public subnet 2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de280db3cf13e878",
            "connectivity_type": "public",
            "id": "nat-0e44c4e3371bfb801",
            "network_interface_id": "eni-0718bf25efe108c0d",
            "private_ip": "10.0.0.115",
            "public_ip": "54.87.114.178",
            "subnet_id": "subnet-0f27b1b188fc0bf28",
            "tags": {
              "Name": "nat gateway in public subnet 1"
            },
            "tags_all": {
              "Name": "nat gateway in public subnet 1"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_1",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07ed21a7e6fd44f0c",
            "connectivity_type": "public",
            "id": "nat-0d0900979093aae63",
            "network_interface_id": "eni-054a9b0f180c88ff2",
            "private_ip": "10.0.1.190",
            "public_ip": "54.166.155.159",
            "subnet_id": "subnet-02ab3d7ef6c49b5d9",
            "tags": {
              "Name": "nat gateway in public subnet 2"
            },
            "tags_all": {
              "Name": "nat gateway in public subnet 2"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_2",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:route-table/rtb-0b80c60c7a6a54512",
            "id": "rtb-0b80c60c7a6a54512",
            "owner_id": "137806223286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e44c4e3371bfb801",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 1"
            },
            "tags_all": {
              "Name": "private route table 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_1",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:route-table/rtb-0488ae8f6b579e4a8",
            "id": "rtb-0488ae8f6b579e4a8",
            "owner_id": "137806223286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d0900979093aae63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table 2"
            },
            "tags_all": {
              "Name": "private route table 2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_2",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_app_1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036d46a45da30ba4a",
            "route_table_id": "rtb-0b80c60c7a6a54512",
            "subnet_id": "subnet-0933c0279978decbd"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_1",
            "module.nat_gateway.aws_route_table.private_route_table_private_subnet_1",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.private_subnet_app_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_app_2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c226d5626238bd47",
            "route_table_id": "rtb-0488ae8f6b579e4a8",
            "subnet_id": "subnet-06f323f5116e7a90f"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_2",
            "module.nat_gateway.aws_route_table.private_route_table_private_subnet_2",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.private_subnet_app_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_data_1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0294be0ba8763e02d",
            "route_table_id": "rtb-0b80c60c7a6a54512",
            "subnet_id": "subnet-0f80a97ce284d68da"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_1",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_1",
            "module.nat_gateway.aws_route_table.private_route_table_private_subnet_1",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.private_subnet_data_1",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_data_2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc2bc9ebdb08a2d",
            "route_table_id": "rtb-0488ae8f6b579e4a8",
            "subnet_id": "subnet-00ddbcd08678d22dc"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.eip_for_nat_gateway_public_subnet_2",
            "module.nat_gateway.aws_nat_gateway.nat_gateway_public_subnet_2",
            "module.nat_gateway.aws_route_table.private_route_table_private_subnet_2",
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_subnet.private_subnet_data_2",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:security-group/sg-09cf06550a67f555e",
            "description": "enable http/https access on port 80 and 443 to alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cf06550a67f555e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "137806223286",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:security-group/sg-0a3c41ccf5c7698c6",
            "description": "enable http/https access on port 80 and 443 to ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3c41ccf5c7698c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cf06550a67f555e"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09cf06550a67f555e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ecs securiry group",
            "name_prefix": "",
            "owner_id": "137806223286",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.alb_security_group",
            "module.vpc.aws_vpc.TerraformCloudChallenge"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TerraformCloud_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:internet-gateway/igw-03482cf321d20ba80",
            "id": "igw-03482cf321d20ba80",
            "owner_id": "137806223286",
            "tags": {
              "Name": "TerraformCloudProject_internet_gateway"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_internet_gateway"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:route-table/rtb-093d461849f9bdb0a",
            "id": "rtb-093d461849f9bdb0a",
            "owner_id": "137806223286",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03482cf321d20ba80",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "TerraformCloudProject_public_route_table"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_vpc.TerraformCloudChallenge"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef1567c6268c74c2",
            "route_table_id": "rtb-093d461849f9bdb0a",
            "subnet_id": "subnet-0f27b1b188fc0bf28"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet_2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deedefb6f4ad9825",
            "route_table_id": "rtb-093d461849f9bdb0a",
            "subnet_id": "subnet-02ab3d7ef6c49b5d9"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.TerraformCloud_internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-0933c0279978decbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0933c0279978decbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_private_subnet_app_1"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_private_subnet_app_1"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-06f323f5116e7a90f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f323f5116e7a90f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_private_subnet_app_2"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_private_subnet_app_2"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_data_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-0f80a97ce284d68da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f80a97ce284d68da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_private_subnet_data_1"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_private_subnet_data_1"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_data_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-00ddbcd08678d22dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ddbcd08678d22dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_private_subnet_data-2"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_private_subnet_data-2"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-0f27b1b188fc0bf28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f27b1b188fc0bf28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_public_subnet_1"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_public_subnet_1"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:subnet/subnet-02ab3d7ef6c49b5d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ab3d7ef6c49b5d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "137806223286",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformCloudProject_public_subnet_2"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_public_subnet_2"
            },
            "vpc_id": "vpc-0775ea79efdf2542f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.TerraformCloudChallenge",
            "module.vpc.data.aws_availability_zones.availability_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TerraformCloudChallenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:137806223286:vpc/vpc-0775ea79efdf2542f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b3074c8656c19d4",
            "default_route_table_id": "rtb-052ad692a32feedd1",
            "default_security_group_id": "sg-04f028476bc910942",
            "dhcp_options_id": "dopt-993a87e3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0775ea79efdf2542f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052ad692a32feedd1",
            "owner_id": "137806223286",
            "tags": {
              "Name": "TerraformCloudProject_vpc"
            },
            "tags_all": {
              "Name": "TerraformCloudProject_vpc"
            }
          }
        }
      ]
    }
  ]
}